# super-waddle

./: Cargo.toml  README.md
assets/: game_config.json
assets/sprites/: basket.aseprite  flower_blue.aseprite  flower_purple.aseprite  flower_white.aseprite  goose.aseprite  spike_flower.aseprite
src/: assets.rs  camera.rs  enemy.rs  game.rs  input.rs  main.rs  player.rs  ui.rs
