[package]
name = "super-waddle"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.13"
bevy_asset_loader = "0.20"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
